Fixed workflow secrets use

--- a/.github/workflows/main_bum-brains.yml
+++ b/.github/workflows/main_bum-brains.yml
@@ -38,9 +38,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_ED777E02ECC749D781725F9937C2FCCD }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_7BDB3466722C419A882BD0D7044CC720 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_911693C69ADF4C6EA3A6FD36278254BF }}
+          client-id: ${{ secrets.AZURE_CLIENTID }}
+          tenant-id: ${{ secrets.AZURE_TENANTID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTIONID }}
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
