--- a/BumBrains/BumBrains.csproj
+++ b/BumBrains/BumBrains.csproj
@@ -26,4 +26,7 @@
   <ItemGroup>
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\Responses\" />
+  </ItemGroup>
 </Project>
